--- a/index.html
+++ b/index.html
@@ -1,63 +1,111 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Green Spinning 3D Rhomboid Dodecahedron</title>
-  <style>
-    /* Add styling for the 3D rhomboid dodecahedron */
-    .dodecahedron {
-      width: 100px;
-      height: 100px;
-      perspective: 1000px;
+  <head>
+    <title>Green Spinning 3D Rhomboid Dodecahedron</title>
+  </head>
+  <body>
+    <canvas id="canvas"></canvas>
+    <script>
+      // Get canvas element
+      var canvas = document.getElementById("canvas");
+      // Get canvas context
+      var ctx = canvas.getContext("2d");
+      // Set canvas width and height
+      canvas.width = 500;
+      canvas.height = 500;
+      // Set 3D projection
+      ctx.setTransform(1, 0, 0, -1, canvas.width/2, canvas.height/2);
+      // Set line width
+      ctx.lineWidth = 2;
+      // Set fill style to green
+      ctx.fillStyle = "green";
+      // Set stroke style to black
+      ctx.strokeStyle = "black";
+Copy code
+  // Define 3D points for rhomboid dodecahedron
+  var points = [    [-50, 0, 0],
+    [50, 0, 0],
+    [0, -50, 0],
+    [0, 50, 0],
+    [0, 0, -50],
+    [0, 0, 50]
+  ];
+  // Define faces of rhomboid dodecahedron
+  var faces = [    [0, 2, 4],
+    [0, 4, 1],
+    [0, 1, 3],
+    [0, 3, 2],
+    [1, 4, 5],
+    [1, 5, 3],
+    [2, 3, 5],
+    [2, 5, 4],
+    [3, 1, 4],
+    [3, 4, 2],
+    [4, 2, 0],
+    [4, 0, 1],
+    [5, 1, 0],
+    [5, 0, 2],
+    [5, 4, 1],
+    [5, 1, 3]
+  ];
+  
+  // Define function to draw 3D shape
+  function drawShape(points, faces) {
+    // Loop through faces
+    for (var i = 0; i < faces.length; i++) {
+      // Get points for current face
+      var face = faces[i];
+      // Begin path
+      ctx.beginPath();
+      // Move to first point
+      ctx.moveTo(points[face[0]][0], points[face[0]][1]);
+      // Draw lines to other points
+      for (var j = 1; j < face.length; j++) {
+        ctx.lineTo(points[face[j]][0], points[face[j]][1]);
+      }
+      // Close path and fill shape
+      ctx.closePath();
+      ctx.fill();
+      // Stroke shape
+      ctx.stroke();
     }
-    .dodecahedron .face {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background: green;
-      border: 1px solid black;
-      transform-style: preserve-3d;
-    }
-    .dodecahedron .face.front {
-      transform: rotateY(0deg) translateZ(50px);
-    }
-    .dodecahedron .face.right {
-      transform: rotateY(72deg) translateZ(50px);
-    }
-    .dodecahedron .face.back {
-      transform: rotateY(144deg) translateZ(50px);
-    }
-    .dodecahedron .face.left {
-      transform: rotateY(216deg) translateZ(50px);
-    }
-    .dodecahedron .face.top {
-      transform: rotateX(36deg) translateZ(50px);
-    }
-    .dodecahedron .face.bottom {
-      transform: rotateX(-36deg) translateZ(50px);
-    }
-  </style>
-</head>
-<body>
-  <div class="dodecahedron">
-    <div class="face front"></div>
-    <div class="face right"></div>
-    <div class="face back"></div>
-    <div class="face left"></div>
-    <div class="face top"></div>
-    <div class="face bottom"></div>
-  </div>
-  <!-- Add JavaScript for the spinning animation -->
-  <script>
-    const dodecahedron = document.querySelector('.dodecahedron');
-    let rotation = 0;
-    
-    function spin() {
-      rotation += 1;
-      dodecahedron.style.transform = `rotateY(${rotation}deg)`;
-      requestAnimationFrame(spin);
-    }
-    
-    spin();
-  </script>
-</body>
+  }
+  
+  // Define function to rotate shape
+  function rotateShape(points, angle) {
+    // Loop through points
+    for (var i = 0; i < points.length; i++) {
+      // Get current point
+      var point = points[i];
+      // Calculate new x and y positions using trigonometry
+      var x = point[0] * Math.cos(angle) - point[1] * Math. sin(angle);
+var y = point[0] * Math.sin(angle) + point[1] * Math.cos(angle);
+// Update point with new positions
+points[i] = [x, y, point[2]];
+}
+}
+
+// Define angle for rotation
+var angle = 0;
+// Define rotation speed
+var speed = 0.01;
+
+// Define function for animation loop
+function animate() {
+// Clear canvas
+ctx.clearRect(-canvas.width/2, -canvas.height/2, canvas.width, canvas.height);
+// Rotate shape
+rotateShape(points, angle);
+// Draw shape
+drawShape(points, faces);
+// Increase angle for next rotation
+angle += speed;
+// Request next frame for animation loop
+requestAnimationFrame(animate);
+}
+
+// Start animation loop
+animate();
+</script>
+  </body>
 </html>
