--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Green Spinning 3D Rhomboid Dodecahedron</title>
+    <title>Random Symmetrical Shapes</title>
   </head>
   <body>
     <canvas id="canvas"></canvas>
@@ -13,99 +13,45 @@
       // Set canvas width and height
       canvas.width = 500;
       canvas.height = 500;
-      // Set 3D projection
-      ctx.setTransform(1, 0, 0, -1, canvas.width/2, canvas.height/2);
-      // Set line width
-      ctx.lineWidth = 2;
-      // Set fill style to green
-      ctx.fillStyle = "green";
-      // Set stroke style to black
-      ctx.strokeStyle = "black";
 Copy code
-  // Define 3D points for rhomboid dodecahedron
-  var points = [    [-50, 0, 0],
-    [50, 0, 0],
-    [0, -50, 0],
-    [0, 50, 0],
-    [0, 0, -50],
-    [0, 0, 50]
-  ];
-  // Define faces of rhomboid dodecahedron
-  var faces = [    [0, 2, 4],
-    [0, 4, 1],
-    [0, 1, 3],
-    [0, 3, 2],
-    [1, 4, 5],
-    [1, 5, 3],
-    [2, 3, 5],
-    [2, 5, 4],
-    [3, 1, 4],
-    [3, 4, 2],
-    [4, 2, 0],
-    [4, 0, 1],
-    [5, 1, 0],
-    [5, 0, 2],
-    [5, 4, 1],
-    [5, 1, 3]
-  ];
-  
-  // Define function to draw 3D shape
-  function drawShape(points, faces) {
-    // Loop through faces
-    for (var i = 0; i < faces.length; i++) {
-      // Get points for current face
-      var face = faces[i];
-      // Begin path
+  // Define function to draw random symmetrical shape
+  function drawRandomShape() {
+    // Choose random shape (circle or square)
+    var shape = Math.round(Math.random()) ? "circle" : "square";
+    // Choose random size for shape
+    var size = Math.floor(Math.random() * 50) + 50;
+    // Choose random x and y positions for shape
+    var x = Math.floor(Math.random() * canvas.width);
+    var y = Math.floor(Math.random() * canvas.height);
+    // Set fill style to random color
+    ctx.fillStyle = '#'+(Math.random()*0xFFFFFF<<0).toString(16);
+    // Draw shape
+    if (shape === "circle") {
       ctx.beginPath();
-      // Move to first point
-      ctx.moveTo(points[face[0]][0], points[face[0]][1]);
-      // Draw lines to other points
-      for (var j = 1; j < face.length; j++) {
-        ctx.lineTo(points[face[j]][0], points[face[j]][1]);
-      }
-      // Close path and fill shape
-      ctx.closePath();
+      ctx.arc(x, y, size/2, 0, 2*Math.PI);
       ctx.fill();
-      // Stroke shape
-      ctx.stroke();
+    } else {
+      ctx.fillRect(x - size/2, y - size/2, size, size);
     }
   }
   
-  // Define function to rotate shape
-  function rotateShape(points, angle) {
-    // Loop through points
-    for (var i = 0; i < points.length; i++) {
-      // Get current point
-      var point = points[i];
-      // Calculate new x and y positions using trigonometry
-      var x = point[0] * Math.cos(angle) - point[1] * Math.sin(angle);
-var y = point[0] * Math.sin(angle) + point[1] * Math.cos(angle);
-// Update point with new positions
-points[i] = [x, y, point[2]];
-}
-}
-
-// Define angle for rotation
-var angle = 0;
-// Define rotation speed
-var speed = 0.01;
-
-// Define function for animation loop
-function animate() {
-// Clear canvas
-ctx.clearRect(-canvas.width/2, -canvas.height/2, canvas.width, canvas.height);
-// Rotate shape
-rotateShape(points, angle);
-// Draw shape
-drawShape(points, faces);
-// Increase angle for next rotation
-angle += speed;
-// Request next frame for animation loop
-requestAnimationFrame(animate);
-}
-
-// Start animation loop
-animate();
+  // Define function to clear canvas
+  function clearCanvas() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+  }
+  
+  // Define function for animation loop
+  function animate() {
+    // Clear canvas
+    clearCanvas();
+    // Draw random shape
+    drawRandomShape();
+    // Set timeout to draw new shape after random interval
+    setTimeout(animate, Math.floor(Math.random() * 1000) + 500);
+  }
+  
+  // Start animation loop
+  animate();
 </script>
   </body>
 </html>
